# cplus_boilerplate

./: CMakeLists.txt
include/: math_functions.h
src/: CMakeLists.txt  main  test_math_functions.cpp
